--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div id="div-aparece-forca" class="canvas">
 				<canvas id="forca" height="400px"width="1200px"></canvas>
-				<div class="botoes-canvas">
+				<div class="botoes-canvas" type="text">
 					<input class="btn-novo-jogo" type="submit" value="Novo jogo" onclick="iniciarJogo()">
 					<input class="btn-desistir" type="submit" value="Desistir" id="desistir" onclick="recarregar()">
 				</div>	
