--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				<input class="btn-iniciar" type="submit" value="Começar a jogar" id="iniciar-jogo" onclick="iniciarJogo()">
 				<input class="btn-palavra" type="submit" value="Adicionar palavra" onclick="novaPalavra()">
 			</div>
-			<div id="div-aparece-forca" class="canvas">
+			<div id="div-aparece-forca" class="canvas" type="text">
 				<canvas id="forca" height="400px"width="1200px"></canvas>
-				<div class="botoes-canvas" type="text">
+				<div class="botoes-canvas" >
 					<input class="btn-novo-jogo" type="submit" value="Novo jogo" onclick="iniciarJogo()">
 					<input class="btn-desistir" type="submit" value="Desistir" id="desistir" onclick="recarregar()">
 				</div>	
