--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body onkeydown="keyEvent(event)" onkeyup="metaKeyUp(event)">
 	<header>
 		<section class="caixa">
 			<h1 class="titulo">Jogo da Forca</h1>         
