--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
 	</footer>
 	<script src="forca.js"></script>
 	<script src="canvas.js"></script>
+	<!-- jQuery -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+<!-- jQuery UI theme or Bootstrap (optional, if you create a custom theme) -->
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
+<!-- jQuery UI position utility (optional, if you position the keyboard yourself) -->
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
+
+<!-- keyboard widget css & script -->
+<link href="css/keyboard.css" rel="stylesheet">
+<script src="js/jquery.keyboard.js"></script>
+<script src="js/jquery.keyboard.extension-autocomplete.js"></script>
+
+<!-- optional plugins -->
+<script src="js/jquery.mousewheel.js"></script>
 	
 </body>
 </html>
